# dva_smp_launcher

./: .gitignore  Cargo.toml  README.md  build.rs  build_cfg.example.py  build_cfg.py  flake.nix  package.json  pyproject.toml  vite.config.ts  write_build_cfg.py
.github/workflows/: build.yml  deploy.yml
assets/: Info.plist
flatpak/: dev.vanutp.DvaSmp.yaml  dvasmp.desktop  dvasmp.sh  python3-requirements.json
launcher/: Cargo.toml  build.rs
launcher/meta/: generate_overrides.py  library-overrides.json  mojang-library-patches.json
launcher/src/: lang.rs  main.rs  message_provider.rs  utils.rs
launcher/src/app/: app.rs  auth_state.rs  background_task.rs  java_state.rs  language_selector.rs  launch_state.rs  manifest_state.rs  metadata_state.rs  mod.rs  modpack_sync_state.rs  progress_bar.rs  settings.rs
launcher/src/auth/: auth.rs  base.rs  elyby.rs  microsoft.rs  mod.rs  none.rs  telegram.rs
launcher/src/config/: build_config.rs  mod.rs  runtime_config.rs
launcher/src/launcher/: compat.rs  launch.rs  mod.rs  update.rs
launcher/src/update_app/: app.rs
launcher/src/version/: complete_version_metadata.rs  merged_version_metadata.rs  mod.rs  overrides.rs  rules.rs  sync.rs
meta/: generate_overrides.py  library-patches.json  lwjgl-version-matches.json
modpack_builder/: .gitignore  Cargo.toml  README.md  generate.py  main.py  pyproject.toml  simple.py  spec.json  spec.json.example  utils.py
modpack_builder/src/: main.rs  progress.rs  spec.rs  utils.rs
modpack_builder/src/generate/: extra.rs  manifest.rs  mapping.rs  mod.rs  patch.rs  sync.rs
modpack_builder/src/generate/loaders/: fabric.rs  forge.rs  generator.rs  mod.rs  vanilla.rs
shared/: Cargo.toml
shared/src/: files.rs  java.rs  lib.rs  logs.rs  paths.rs  progress.rs  utils.rs
shared/src/version/: asset_metadata.rs  extra_version_metadata.rs  mod.rs  version_manifest.rs  version_metadata.rs
spec/: linux.spec
src/: App.vue  AppWrapper.vue  compat.py  config.py  config.rs  constants.rs  errors.py  files.rs  interactive.rs  lang.rs  launcher.py  main.py  main.rs  main.ts  progress.rs  style.css  tui.py  update.py  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ely_by/: authorize.rs  mod.rs
src-tauri/src/utils/: consts.rs  find_java.rs  sync_modpack.rs
src-taurid/: main.rs
src/app/: app.rs  auth_state.rs  index_state.rs  java_state.rs  language_selector.rs  launch_state.rs  launcher.rs  manifest_state.rs  metadata_state.rs  mod.rs  modpack_sync_state.rs  progress_bar.rs  task.rs
src/auth/: __init__.py  auth.rs  base.py  base.rs  ely_by.py  elyby.rs  mod.rs  telegram.rs  tgauth.py
src/components/: Config.vue  Error.vue  Loading.vue
src/config/: build_config.rs  mod.rs  runtime_config.rs
src/ely_by/: __init__.py  authorize.py  authorize.rs  utils.py  utils.rs
src/launcher/: compat.rs  java.rs  launch.rs  mod.rs  update.rs
src/modpack/: asset_metadata.rs  complete_version_metadata.rs  extra_version_metadata.rs  files.rs  index.rs  mod.rs  overrides.rs  sync.rs  version_manifest.rs  version_metadata.rs
src/update_app/: app.rs
src/utils/: hash_file.rs  java.py  mod.rs  modpack.py  sync_modpack.rs
ui/: appwindow.slint  page_auth_waiting.slint  page_config.slint  page_error.slint  page_loading.slint  page_starting.slint  progressbar.slint
