[package]
name = "potato_launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clearscreen = "3.0.0"
colored = "2.1.0"
ctrlc = "3.4.4"
dirs = "5.0.1"
futures = "0.3.30"
indicatif = "0.17.8"
inquire = "0.7.5"
num_cpus = "1.16.0"
open = "5.3.0"
qr2term = "0.3.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
tokio = { version = "1.39.1", features = ["full"] }
