[tool.poetry]
name = "dva-smp-launcher"
version = "0.1.0"
description = ""
authors = ["Ivan Filipenkov <hello@vanutp.dev>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
httpx = "^0.24.1"
inquirer = "^3.1.3"
platformdirs = "^3.5.3"
starlette = "^0.28.0"
uvicorn = "^0.22.0"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.12.0"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
