[tool.poetry]
name = "dva-smp-launcher"
version = "0.1.0"
description = ""
authors = ["Ivan Filipenkov <hello@vanutp.dev>"]

[tool.black]
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.11,<3.13"
httpx = "^0.27.0"
inquirer = "^3.2.4"
platformdirs = "^4.2.2"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
rich = "^13.6.0"
qrcode = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.8.0"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
