[package]
name = "modpack_builder"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = "4.5.19"
env_logger = "0.11.5"
fs_extra = "1.3.0"
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = "1.0.210"
serde_json = "1.0.128"
shared = { path = "../shared" }
thiserror = "1.0.64"
tokio = "1.40.0"
