[tool.poetry]
name = "libs-downloader"
version = "0.1.0"
description = ""
authors = ["Ivan Filipenkov <hello@vanutp.dev>"]
readme = "README.md"
packages = [{include = "libs_downloader"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
