[tool.poetry]
name = "libs-downloader"
version = "0.1.0"
description = ""
authors = ["Ivan Filipenkov <hello@vanutp.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
tqdm = "^4.65.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
