[tool.poetry]
name = "libs-downloader"
version = "0.1.0"
description = ""
authors = ["Ivan Filipenkov <hello@vanutp.dev>"]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
httpx = "^0.27.0"
tqdm = "^4.66.4"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
