[package]
name = "shared"
version = "1.0.0"
edition = "2021"

[dependencies]
flate2 = "1.0.34"
futures = "0.3.30"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
tar = "0.4.42"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
which = "6.0.3"
zip = "2.2.0"
