[package]
name = "shared"
version = "1.0.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
env_logger = "0.11.5"
flate2 = "1.0.34"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
maplit = "1.0.2"
num_cpus = "1.16.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
tar = "0.4.42"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
walkdir = "2.5.0"
which = "6.0.3"
zip = "2.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }
winreg = "0.52.0"
