[package]
name = "dva_smp_launcher"
version = "0.1.0"
authors = ["you"]
# TODO
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
actix-web = "4.3.1"
anyhow = "1.0.71"
base16ct = "0.2.0"
clone-macro = "0.1.0"
directories = "5.0.1"
futures = "0.3.28"
registry = "1.2.3"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
semver = "1.0.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha1 = { version = "0.10.5", features = ["asm"] }
tokio = { version = "1.28.2", features = ["full"] }
walkdir = "2.3.3"
webbrowser = "0.8.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
